--- a/branches/Ver2/res/layout/statistics.xml
+++ b/branches/Ver2/res/layout/statistics.xml
@@ -2,13 +2,24 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
-    android:background="#000000"
     android:orientation="vertical" >
-    <TextView
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:text="Statistics View"
-        android:textSize="30dp">
-        
-    </TextView>
+	<LinearLayout
+	    android:id="@+id/chart"
+	    android:layout_width = "fill_parent"
+	    android:layout_height="380dp"
+	    android:orientation="vertical" >	    
+	</LinearLayout>
+	
+	<LinearLayout
+	    android:layout_width="fill_parent"
+	    android:layout_height="40dp"
+	    android:orientation="horizontal" >
+		<Button
+		    android:id="@+id/stats_home_button"
+		    android:layout_width="100dp"
+		    android:layout_height="40dp"
+		    
+		    android:text="Home">
+		</Button>	
+	</LinearLayout>
 </LinearLayout>
