--- a/res/layout/collecting_acceleration.xml
+++ b/res/layout/collecting_acceleration.xml
@@ -10,21 +10,12 @@
 	    android:layout_height="60dp"
 	    android:orientation="horizontal" >
 	    <TextView
-	        android:layout_width="260dp"
+	        android:layout_width="fill_parent"
 	        android:layout_height="60dp"
 	        android:gravity="center|center_vertical"
 	        android:text="Golf Swing Analyzer"
 	        android:textAppearance="?android:attr/textAppearanceLarge" >
 	    </TextView>
-	    
-	    <ImageButton 
-			android:id="@+id/settings_button"
-		    android:layout_width="60dp"
-		    android:layout_height="60dp"
-		    android:gravity="center"
-		    android:background="#000000"
-		    android:src="@drawable/settings">
-		</ImageButton>
     </LinearLayout>
     
 	<LinearLayout
@@ -48,7 +39,7 @@
         android:gravity="center|center_vertical"
         android:text="3 seconds left."
         android:textColor="#FFFFFF"
-        android:textSize="30px" />    
+        android:textAppearance="?android:attr/textAppearanceMedium" />    
 
     </LinearLayout>
     
@@ -63,12 +54,12 @@
         android:layout_height="70dp"
         android:orientation="horizontal">    
 	    <Button
-	        android:id="@+id/skip_button"
+	        android:id="@+id/feedback_button"
 	        android:layout_width="120dp"
 	        android:layout_height="fill_parent"
 	        android:layout_weight="1"
 	        android:layout_gravity="center"
-	        android:text="Statistics"
+	        android:text="Feedback Screen"
 	        android:textAppearance="?android:attr/textAppearanceMedium" />
 	    <Button 
 	        android:id="@+id/collection_home_button"
