--- a/res/layout/home.xml
+++ b/res/layout/home.xml
@@ -30,30 +30,43 @@
 
     <LinearLayout
         android:layout_width="fill_parent"
-        android:layout_height="40dp"
+        android:layout_height="30dp"
         android:orientation="vertical" >
     </LinearLayout>
 
     <Button
         android:id="@+id/home_real_swing_button"
         android:layout_width="200dp"
-        android:layout_height="100dp"
+        android:layout_height="90dp"
         android:layout_gravity="center"
         android:text="Analyzing the real swing data" 
         android:textAppearance="?android:attr/textAppearanceMedium"/>
 
     <LinearLayout
         android:layout_width="fill_parent"
-        android:layout_height="40dp"
+        android:layout_height="30dp"
         android:orientation="vertical" >
     </LinearLayout>
 
     <Button
         android:id="@+id/home_collecting_data_button"
         android:layout_width="200dp"
-        android:layout_height="100dp"
+        android:layout_height="90dp"
         android:layout_gravity="center"
         android:text="Collecting Golf swing data" 
         android:textAppearance="?android:attr/textAppearanceMedium"/>
-
+    
+	<LinearLayout
+        android:layout_width="fill_parent"
+        android:layout_height="30dp"
+        android:orientation="vertical" >
+    </LinearLayout>
+    
+    <Button
+        android:id="@+id/home_statistics_button"
+        android:layout_width="200dp"
+        android:layout_height="90dp"
+        android:layout_gravity="center"
+        android:text="Statistics of Swings" 
+        android:textAppearance="?android:attr/textAppearanceMedium"/>
 </LinearLayout>
