--- a/res/layout/settings.xml
+++ b/res/layout/settings.xml
@@ -2,10 +2,8 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
-    android:background="#000000"
     android:orientation="vertical" >
-
-    <TextView
+	<TextView
         android:layout_width="fill_parent"
         android:layout_height="50dp"
         android:gravity="center|center_horizontal"
@@ -17,178 +15,23 @@
         android:background="#FFFFFF"
         android:orientation="vertical" >
     </LinearLayout>
-    
-    <LinearLayout
-	    android:layout_width="fill_parent"
-	    android:layout_height="10dp"
-	    android:orientation="vertical">
-    </LinearLayout>
-    
-    <LinearLayout
-	    android:layout_width="fill_parent"
-	    android:layout_height="60dp"
-	    android:orientation="horizontal">
-	    <TextView
-	        android:id="@+id/collection_time_text"
-	        android:layout_width="180dp"
-	        android:layout_height="fill_parent"
-	        android:gravity="center|center_horizontal"
-	        android:text="Swing collection time"
-	        android:textAppearance="?android:attr/textAppearanceMedium"/>
-
-	    <Spinner
-	        android:id="@+id/collection_time_spinner"
-	        android:layout_width="100dp"
-	        android:layout_height="fill_parent"
-	        android:layout_weight="1"/>
-	    
-    </LinearLayout>
-    
-	<LinearLayout
-	    android:layout_width="fill_parent"
-	    android:layout_height="10dp"
-	    android:orientation="vertical">
-    </LinearLayout> 
-    
-     <LinearLayout
+		
+    <ListView
+        android:id="@+id/setting_listItem"
+        android:layout_width="match_parent"
+        android:layout_height="300dp" >
+    </ListView>
+   
+    <LinearLayout 
         android:layout_width="fill_parent"
-        android:layout_height="0.5dp"
-        android:background="#FFFFFF"
-        android:orientation="vertical" >
+        android:layout_height="30dp">
     </LinearLayout>
-	
-	<LinearLayout
-	    android:layout_width="fill_parent"
-	    android:layout_height="40dp"
-	    android:orientation="vertical">
-	    <TextView
-	        android:layout_width="fill_parent"
-	        android:layout_height="fill_parent"
-	        android:text="Feedback sound"
-	        android:gravity="center|center_vertical"
-	        android:textAppearance="?android:attr/textAppearanceMedium"/>
-    </LinearLayout>
-	
-	     
-	
-	<LinearLayout
-	    android:layout_width="fill_parent"
-	    android:layout_height="50dp"
-	    android:orientation="horizontal">
-	    <RadioGroup
-	        android:id="@+id/radio_group_beep"
-	        android:layout_width="fill_parent"
-	        android:layout_height="fill_parent"
-	        android:checkedButton="@+id/radio_musical_notes"
-	        android:orientation="horizontal" >
-      	<RadioButton
-            android:id="@+id/radio_beep"
-            android:layout_width="100dp"
-            android:layout_height="fill_parent"
-            android:layout_gravity="center_vertical"
-            android:layout_weight="1"            
-            android:text="Beep"
-            android:textAppearance="?android:attr/textAppearanceMedium" />
-
-        <RadioButton
-            android:id="@+id/radio_musical_notes"
-            android:layout_width="100dp"
-            android:layout_height="fill_parent"
-            android:layout_gravity="center_vertical"
-            android:layout_weight="1"                 
-            android:text="Musical notes"
-            android:textAppearance="?android:attr/textAppearanceMedium" />
-    </RadioGroup>	    
-	</LinearLayout>
-	
-	<LinearLayout
-        android:layout_width="fill_parent"
-        android:layout_height="0.5dp"
-        android:background="#FFFFFF"
-        android:orientation="vertical" >
-    </LinearLayout>
-    
-	 <LinearLayout
-        android:layout_width="fill_parent"
-        android:layout_height="40dp"
-        android:orientation="vertical" >
-        <TextView
-            android:layout_width="fill_parent"
-            android:layout_height="fill_parent"
-            android:text="Threshold"
-            android:gravity="center"
-            android:textAppearance="?android:attr/textAppearanceMedium">            
-        </TextView>
-    </LinearLayout>   
-    
-    <LinearLayout
-        android:layout_width="fill_parent"
+   <Button
+        android:id="@+id/setting_back"
+        android:layout_width="120dp"
         android:layout_height="50dp"
-        android:orientation="horizontal" >
-    	<TextView
-    	    android:layout_width="50dp"
-    	    android:layout_height="fill_parent"
-    	    android:layout_weight="0.91"
-    	    android:text="X-MAX" 
-    	    android:textAppearance="?android:attr/textAppearanceSmall"
-    	    android:gravity="center|center_horizontal">    	    
-    	</TextView>
-        <EditText
-            android:id="@+id/settings_threshold_hi"
-            android:layout_width="100dp"
-            android:layout_height="fill_parent"
-            android:layout_weight="1"
-            android:inputType="numberDecimal|numberSigned">            
-        </EditText>
-		<TextView
-    	    android:layout_width="50dp"
-    	    android:layout_height="fill_parent"
-    	    android:layout_weight="0.91"
-    	    android:text="Y-MIN" 
-    	    android:gravity="center|center_horizontal"
-    	    android:textAppearance="?android:attr/textAppearanceSmall">    	    
-    	</TextView>
-        <EditText
-            android:id="@+id/settings_threshold_low"
-            android:layout_width="100dp"
-            android:layout_height="fill_parent"
-            android:layout_weight="1" 
-            android:inputType="numberDecimal|numberSigned">
-        </EditText>
-    </LinearLayout>	
-
-	<LinearLayout
-        android:layout_width="fill_parent"
-        android:layout_height="0.5dp"
-        android:background="#FFFFFF"
-        android:orientation="vertical" >
-    </LinearLayout>
-    
- 	<LinearLayout
-	    android:layout_width="fill_parent"
-	    android:layout_height="30dp"
-	    android:orientation="vertical">
-    </LinearLayout> 
+        android:layout_gravity="center"
+        android:text="Back" 
+        android:textAppearance="?android:attr/textAppearanceMedium" />
 	
-	<LinearLayout
-	    android:layout_width="fill_parent"
-	    android:layout_height="60dp"
-	    android:orientation="horizontal"> 		
-		<Button
-		    android:id="@+id/settings_ok_button"
-		    android:layout_width="80dp"
-		    android:layout_height="fill_parent"
-		    android:layout_gravity="center"
-		    android:layout_weight="1"
-		    android:text="OK" 
-		    android:textAppearance="?android:attr/textAppearanceMedium"/>
-		<Button
-		    android:id="@+id/settings_cancel_button"
-		    android:layout_width="80dp"
-		    android:layout_height="fill_parent"
-		    android:layout_gravity="center"
-		    android:layout_weight="1"
-		    android:text="Cancel" 
-		    android:textAppearance="?android:attr/textAppearanceMedium" />
-	</LinearLayout>
 </LinearLayout>
