--- a/res/layout/home.xml
+++ b/res/layout/home.xml
@@ -34,13 +34,13 @@
         android:orientation="vertical" >
     </LinearLayout>
 
-    <Button
+    <ImageButton
         android:id="@+id/home_real_swing_button"
-        android:layout_width="200dp"
+        android:layout_width="260dp"
         android:layout_height="90dp"
+        android:background="#000000"
         android:layout_gravity="center"
-        android:text="Analyzing the real swing data" 
-        android:textAppearance="?android:attr/textAppearanceMedium"/>
+        android:src="@drawable/menu_item1"/>
 
     <LinearLayout
         android:layout_width="fill_parent"
@@ -48,13 +48,13 @@
         android:orientation="vertical" >
     </LinearLayout>
 
-    <Button
+    <ImageButton
         android:id="@+id/home_collecting_data_button"
-        android:layout_width="200dp"
+        android:layout_width="260dp"
         android:layout_height="90dp"
+        android:background="#000000"
         android:layout_gravity="center"
-        android:text="Collecting Golf swing data" 
-        android:textAppearance="?android:attr/textAppearanceMedium"/>
+        android:src="@drawable/menu_item2"/>
     
 	<LinearLayout
         android:layout_width="fill_parent"
@@ -62,11 +62,11 @@
         android:orientation="vertical" >
     </LinearLayout>
     
-    <Button
+    <ImageButton
         android:id="@+id/home_statistics_button"
-        android:layout_width="200dp"
-        android:layout_height="90dp"
+        android:layout_width="260dp"
+        android:layout_height="100dp"
+        android:background="#000000"
         android:layout_gravity="center"
-        android:text="Statistics of Swings" 
-        android:textAppearance="?android:attr/textAppearanceMedium"/>
+        android:src="@drawable/menu_item3"/>
 </LinearLayout>
